force-app/package/core/objects/Schema_Mapping_Version__c/Schema_Mapping_Version__c.object-meta.xml
<CustomObject>
    <description>The created output for the records that are being created</description>
    <label>Schema Mapping Version</label>
    <nameField>
        <displayFormat>SMV-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schema Mapping Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>