force-app/package/core/objects/Schema_Mapping_Version__c/fields/Prompt_Output__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Output__c</fullName>
    <description>The generated prompt output generated based on the mappings</description>
    <label>Prompt Output</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>