force-app/package/core/objects/Schema_Mapping_Version__c/fields/Prompt_Output_Hash__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Output_Hash__c</fullName>
    <inlineHelpText>A SHA1 hash of the prompt output to validate if any changes have been made since the last version</inlineHelpText>
    <label>Prompt Output Hash</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>