force-app/package/core/objects/Schema_Mapping_Version__c/fields/Prompt_Output_Length__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Output_Length__c</fullName>
    <label>Prompt Output Length</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>