force-app/package/core/objects/Schema_Mapping_Version__c/fields/Schema_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Schema_Mapping__c</fullName>
    <label>Schema Mapping</label>
    <referenceTo>Schema_Mapping__c</referenceTo>
    <relationshipLabel>Schema Versions</relationshipLabel>
    <relationshipName>Schema_Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>